--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-legacy": "^2.1.0",
+    "kunci": "^1.5.3",
     "svelte-spa-router": "^3.3.0",
     "terser": "^5.15.0",
     "vite-plugin-pages-svelte": "0.0.1"
